force-app/main/default/objects/Booking_Feedback__c/Booking_Feedback__c.object-meta.xml
<CustomObject>
    <label>Booking Feedback</label>
    <nameField>
        <displayFormat>FB-{00000}</displayFormat>
        <label>Booking Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>