force-app/main/default/objects/Booking_Feedback__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Booking Feedback</relationshipLabel>
    <relationshipName>Booking_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>