force-app/main/default/objects/Booking_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Related_To__c</columns>
    <columns>Booking__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Customer_Experience__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>